@startuml

Student o-- Kurs
Ansatt o-- Kurs
Person <|-- Ansatt
Person <|-- Student

class Person {
    - fornavn: String
    - etternavn: String
    - fodselsdato: LocalDate
}

class Ansatt {
    - kurs: ArrayList<Kurs>
    - ansattId: String
}

class Student {
    - kurs: ArrayList<Kurs>
    - studentId: String
    + getAlder(): int
}


class Kurs {
    - kode: String
    - beskrivelse: String
    - studiePoeng: int
}

@enduml